# cookbook

./: .air.toml  .env.example  .gitignore  Makefile  docker-compose.prod.yml  docker-compose.yml  flake.nix  go.mod  go.sum  main.go  package-lock.json  readme.md  tailwind.config.js
api/: Cargo.toml  Dockerfile
api/migrations/: 20231115135135_test.sql  20231115191811_create_user_table.sql  20231118133049_create_following_table.sql  20231205183952_create_post_table.sql  20231217163504_timestamps.sql  20231217172316_create_recipe_table.sql  20231217173731_timestamps_for_recipe.sql  20231218214645_create_recipe_post_table.sql  20240126154323_create_tag_table.sql  20240126154745_create_post_tag_table.sql  20240127173238_create_community_table.sql  20240127174316_create_community_user_table.sql  20240127175429_community_table_timestamp.sql  20240128152543_community_post.sql  20240212111953_create_comment_table.sql  20240212121848_create_post_recipe_comment_tables.sql  20240212133208_comment_timestamp.sql  20240214154946_create_album_table.sql  20240214155223_create_album_object_table.sql  20240217145556_create_tag_table.sql  20240217150129_create_tag_object_table.sql  20240219134313_create_ablum_entry_table.sql  20240219162101_create_tag_entry_table.sql  20240219202234_create_like_tables.sql  20240220214244_create_tag_user_table.sql  20240222172748_follow_accepted_column.sql  20240222193410_community_privacy.sql  20240308133230_create_cookbook_table.sql  20240308133656_create_cookbook_recipe_table.sql  20240327145125_create_cookbook_section_table.sql  (+8 more)
api/src/: api.rs  (+4 more)
(+233 files in other folders)
