[package]
name = "cookbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.3.58"
poem-openapi = { version = "3.0.5", features = ["swagger-ui", "email", "chrono"] }
tokio = { version = "1.34.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "mysql", "chrono"] }
serde = "1.0.192"
serde_json = "1.0"
jsonwebtoken = "9.1.0"
argon2 = "0.5.2"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1.74"